# eval-claude

./: .gitignore  README.md  models.json  pyproject.toml
.github/workflows/: benchmark.yml  discover-models.yml  publish.yml
docs/: data.json  index.html  runs.json
scripts/: discover_models.py  export_run_ledger.py  merge_results.py  parse_eval.py
src/eval_claude/: __init__.py  _provider.py
src/inspect_claude_code/: _provider.py  _registry.py
tests/: test_claude_code.py  test_export_run_ledger.py
