[project]
name = "inspect-claude-code"
version = "0.1.0"
description = "Claude Code CLI provider for inspect_ai — run evals via your Claude subscription instead of per-token API billing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Community" },
]
keywords = ["inspect_ai", "claude", "claude-code", "eval", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inspect_ai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.entry-points.inspect_ai]
inspect_claude_code = "inspect_claude_code._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_claude_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
