[project]
name = "eval-claude"
version = "0.1.0"
description = "Run inspect_ai evals via Claude Code CLI — use your Claude subscription instead of per-token API billing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Community" },
]
keywords = ["inspect_ai", "claude", "claude-code", "eval", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inspect_ai",
    "inspect_evals",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.entry-points.inspect_ai]
eval_claude = "eval_claude._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_claude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
